# Warrior

./: .gitignore  Action.py  ActionViewer.py  Attack.py  Backpack.py  Block.py  BodyPart.py  Camera.py  Cargo.toml  Chest.py  Collider.py  Container.py  Disable.py  Door.py  Drop.py  Entity.py  Events.py  Game.py  GameObject.py  GameWidget.py  Generators.py  Hand.py  HeartPoint.py  InventoryViewer.py  Item.py  KeyController.py  Kill.py  Load.py  Main.py  Map.py  Material.py  Motion.py  Move.py  Operate.py  OperateViewer.py  Pick.py  Pig.py  Player.py  README.md  Render.py  (+21 more)
asserts/font/: minecraft.ttf.import
asserts/textures/: tiles.bmp.import
assets/: curses_640x300.bmp.import  default_theme.tres  icon.svg.import  minecraft.ttf.import
components/: container.rs  item.rs  mod.rs  pickup.rs  tile.gd  tile.gd.uid  user_controller.rs
components/action_component/: action_component.gd  action_component.tscn
components/attribute/: attribute.gd.uid  display_name.rs  mod.rs  modifier.gd  modifier.gd.uid  speed.rs
components/attribute_component/: attribute_component.gd  attribute_component.tscn  attribute_contributor.gd  attribute_contributor.tscn  attribute_detail.gd  attribute_detail.tscn
components/attributes/: attribute.gd  modifier.gd
components/bodypart_component/: bodypart_component.gd  (+1 more)
entities/: backpack.rs  mod.rs  player.rs  sword.rs  wall.rs
managers/: tile_manager.gd  tile_manager.gd.uid
scenes/: bevy_app_singleton.tscn  world.gd  world.gd.uid  world.tscn
states/: player_action.gd  player_action.gd.uid
themes/: default_theme.tres
(+249 files in other folders)
