[package]
name = "warrior"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
godot-bevy = "0.9.2"
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
godot = "0.4"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("trace_tracy"))']
